feat: graficos de performance conectados al backend
